--- a/app/css/mainstyle.css
+++ b/app/css/mainstyle.css
@@ -16,10 +16,7 @@ body{
 
 
 
-#line{
-    height: 1px;
-    background: white;
-}
+
 
 
 #nav{
@@ -49,7 +46,8 @@ body{
 #nav ul li:hover{
     color: white;
     background: #4CAF50;
-    border-left: 5px solid white;
+   /* border-left: 5px solid #F0F3F4;*/
+    
 }
 
 .desaparecer{
