--- a/app/css/mainstyle.css
+++ b/app/css/mainstyle.css
@@ -1,200 +1,251 @@
 body{
     overflow: hidden;
 }
-#header{
+   #header{
     background: #00796B;
     height: 50px;
-}
+   }
 
-#btnExpand{
-    cursor: pointer;
-    margin-top: 16px;
-    margin-left: 0px;
-    color: white;
-}
+            #btnExpand{
+                    cursor: pointer;
+                    margin-top: 16px;
+                    margin-left: 0px;
+                    color: white;
+            }
 
-
-
-
-
-
-
-#nav{
-    padding: 0%;
-    background: #F0F3F4;
-    height: 100%;
-    transition: all 0.5s ease;
-}
+    #nav{
+        padding: 0%;
+        background: #F0F3F4;
+        height: 100%;
+        transition: all 0.5s ease;
+    }
 
 
-#nav ul{
-    list-style: none;
-    padding: 0%;
-    margin: 0%;
-}
+                #nav ul{
+                    list-style: none;
+                    padding: 0%;
+                    margin: 0%;
+                }
 
-#nav ul li {
-    cursor: pointer;
-    color: #34495E;
-    text-decoration: none;
-    display: block;
-    padding: 10px;
-   
-    transition: border 0.3s;
-}
+                #nav ul li {
+                    cursor: pointer;
+                    color: #34495E;
+                    text-decoration: none;
+                    display: block;
+                    padding: 10px;
+                
+                    transition: border 0.3s;
+                }
 
-#nav ul li:hover{
-    color: white;
-    background: #4CAF50;
-   /* border-left: 5px solid #F0F3F4;*/
-    
-}
+                #nav ul li:hover{
+                    color: white;
+                    background: #4CAF50;
+                /* border-left: 5px solid #F0F3F4;*/
+                    
+                }
 
-.desaparecer{
-    margin-left: -55%;
-}
+                .desaparecer{
+                    margin-left: -55%;
+                }
 
-#btnMenu{
-    border-radius: 0%;
-    background: #1E8449;
-    border-color: #1E8449;
-}
+                #btnMenu{
+                    border-radius: 0%;
+                    background: #1E8449;
+                    border-color: #1E8449;
+                }
 
-#section{
+    #section{
 
-    margin: 0%;
-    padding: 0%;
-    height: 88%;
-}
+        margin: 0%;
+        padding: 0%;
+        height: 88%;
+    }
 
-#pnlPatients{
-    border-radius: 1%;
-    border: #00796B;
-    box-shadow: 1px 1px 4px #D5DBDB;
-}
+                #pnlPatients{
+                    
+                    border-radius: 1%;
+                    border: #00796B;
+                    box-shadow: 1px 1px 4px #D5DBDB;
+                }
 
-#pnlPatientsHead{
-    border-radius: 0%;
-    background: #00796B;
-    height: 30px;
-}
+                #pnlPatientsHead{
+                    border-radius: 0%;
+                    background: #00796B;
+                    height: 30px;
+                }
 
 
 
-#pnlPatientsHead i{
-    color: white;
-    
-}
+                #pnlPatientsHead i{
+                    color: white;
+                    
+                }
 
-#pnlPatientsBody{
-   border-top: #00796B;
-   height: 65px;
-   
-}
+                #pnlPatientsBody{
+                border-top: #00796B;
+                height: 65px;
+                
+                }
 
-#pnlPatientsBody #body1{
-    border-top: #00796B;
-    display: flex;
-    padding: 0%;
-   
-}
+                #pnlPatientsBody #body1{
+                    border-top: #00796B;
+                    display: flex;
+                    padding: 0%;
+                
+                }
 
-#pnlPatientsBody #body2{
-    padding: 0%;
-}
+                #pnlPatientsBody #body2{
+                    padding: 0%;
+                }
 
-#pnlPatientsBody #body2 #filter{
-    display: flex;
-}
+                #pnlPatientsBody #body2 #filter{
+                    display: flex;
+                }
 
-#pnlPatientsBody #body2 #filter span{
-    margin-top: 10px;
-    margin-right: 15px;
-    color: #34495E;
-} 
-
-
-
-#pnlPatientsBody #body2 #search{
-    display: flex;
-
-}
-
-#pnlPatientsBody #body2 button{
-    margin-left: 5px;
-    width: 60px;
-
-}
-
-#tbl{
-    margin-top: 10px;
-    width: 100%
-}
-
-#pnlTitleSpares{
-    border: #00796B;
-    border-radius: 1px;
-    box-shadow: 1px 1px 4px #D5DBDB;
-    padding: 0%;
-    margin-bottom: 0%;
-}
-
-#t1 {
-    width: 282px;  
-}
-#t2{
-    width: 220px;
-}
-#t3{
-    width: 150px;
-}
-#t4{
-    width: 180px;
-}
-
-#pnlSpares{
-    border: #00796B;
-    border-radius: 1px;
-    box-shadow: 1px 1px 4px #D5DBDB;
-    padding: 0%;
-    height: 70%;
-    overflow: auto;
-    position: relative;
-}
-
-#tableSpares{
-    padding: 0%;
-     margin: 0%;
-     width:100%;
-}
+                #pnlPatientsBody #body2 #filter span{
+                    margin-top: 10px;
+                    margin-right: 15px;
+                    color: #34495E;
+                } 
 
 
 
-#pnlBody{
-    padding: 0%;
-    overflow: auto;
-}
+                #pnlPatientsBody #body2 #search{
+                    display: flex;
+
+                }
+
+                #pnlPatientsBody #body2 button{
+                    margin-left: 5px;
+                    width: 60px;
+
+                }
+
+                #tbl{
+                    margin-top: 10px;
+                    width: 100%
+                }
+
+                #pnlMainSpares{
+                margin: 15px;
+                }
+
+                #pnlTitleSpares{
+                    border: #00796B;
+                    border-radius: 1px;
+                    box-shadow: 1px 1px 4px #D5DBDB;
+                    padding: 0%;
+                    margin-bottom: 0%;
+                }
+
+                #t1 {
+                    width: 140px;  
+                }
+                #t2{
+                    width: 200px;
+                }
+                #t3{
+                    width: 150px;
+                }
+                #t4{
+                    width: 150px;
+                }
+
+                #pnlSpares{
+                    border: #00796B;
+                    border-radius: 1px;
+                    box-shadow: 1px 1px 4px #D5DBDB;
+                    padding: 0%;
+                    height: 70%;
+                    overflow: auto;
+                    position: relative;
+                }
+
+                #tableSpares{
+                    padding: 0%;
+                    margin: 0%;
+                    width:100%;
+                }
 
 
-#pnlProp{
-    height: 550px;
-}
 
-#aside{
-    background: #F0F3F4;
-    margin: 0%;
-    padding: 0%;
-    height: 91%;
-}
+                #pnlBody{
+                    padding: 0%;
+                    overflow: auto;
+                }
 
-#btnPrecio{
-    color: white;
-}
+                #pnlClients{
+                    height: 455px;
+                    border: #00796B;
+                    border-radius: 1px;
+                    box-shadow: 1px 1px 4px #D5DBDB;
+                    padding: 0%;
+                }
 
-#btnPrograma{
-    color: white;
-}
+                #pnlDataPhone{
+                    border-radius: 0%;
+                    padding: 0%;
+                    width: 552px;
+                    height: 453px;
+                    margin: 1px;
+                }
+                
+                #pnlDataPhone h5{
+                     margin-left: 7px;
+                }
+                
+                #pnlDataPhone label{
+                    margin-top: 10px;
+               }
 
-#btnFactura{
-    color: white;
-}
+                #pnlDataPhone  input {
+                margin: 2px;
+                }
+
+                #pnlDataPhone #listPhonesClient {
+                    margin-right: 13px;
+                    margin-left: 14px;
+                    
+                }
+
+                #pnlDataPhone #listPhonesClient #tablePhones{
+                    height: 280px;
+                    border-radius: 0%;
+                    overflow: auto;
+                    padding: 8px;
+                }
+
+                #listRepairPhone{
+                    margin-top: 1px;
+                    margin-right: 13px;
+                    margin-left: 14px;
+                }
+                #statePrice{
+                    margin-top: 15px;
+                    
+                }
+
+                #statePrice label{
+                    margin-top: 20px;
+                    
+                }
+
+                #statePrice input{
+                    margin-top: 10px;
+                    
+                }
+
+                #pnlRepairsPhone{
+                  height: 90px;
+                  overflow: auto;
+                }
+
+
+
+    #aside{
+        background: #F0F3F4;
+        margin: 0%;
+        padding: 0%;
+        height: 91%;
+    }
+
