--- a/app/css/miestilo.css
+++ b/app/css/miestilo.css
@@ -1,13 +1,27 @@
 #title{
     color: darkcyan;
 }
+#imgAvatar{
+    width: 100px;
+    height: 100px;
+    margin-left: 100px;
+}
+
+#user{
+    border-radius: 1px;
+}
 
 #password{
     margin-top: 20px;
+    border-radius: 1px;
 }
 
 #btnlogin{
     margin-top: 20px;
     width: 304px;
     text-align: center;
+    background: #45B39D;
+    border: #FDFEFE;
+    border-radius: 1px;
+    box-shadow: 1px 1px 4px #B3B6B7;
 }
